--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,21 @@
 /**************/
 /* CSS REMEDY */
 /**************/
-*, *::after, *::before {
-  box-sizing:border-box;  
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
 }
+
 @font-face {
-	font-family:"Lato-Regular", sans-serif;
+	font-family: "Lato-Regular", sans-serif;
 	src: url(./fonts/Lato/Lato-Regular.ttf);
 }
 
 
-h1{ font-family:"Lato-Regular";}
+h1 {
+	font-family: "Lato-Regular";
+}
 
 
 /*********************/
@@ -18,16 +23,61 @@ h1{ font-family:"Lato-Regular";}
 /*********************/
 :root {
 	/* startje */
-	--color-text:#111;
-	--color-background:#eee;
+	--color-text: #111;
+	--color-background: #eee;
 }
+
 /****************/
 /* JOUW STYLING */
 /****************/
 
-header section img{
+header section img {
 	width: 43.75px;
 	height: 50px;
 
 }
 
+nav {
+	position: fixed;
+	background-color: aqua;
+	top:0;
+	bottom:0 ;
+	right: 0;
+	translate:100% 0%;
+
+}
+
+nav ul {
+	display: flex;
+	justify-content: space-between;
+
+}
+
+
+main section:nth-of-type(1) {
+	background-image: url('../images/home-banner-2-scaled.jpg');
+	height: 100%;
+
+
+}
+
+header button img {
+	grid-template-columns: auto;
+	width: 43.75px;
+	height: 50px;
+
+}
+
+@media (min-width:32em) {}
+	main>section:nth-of-type(1)
+
+
+	{
+	background-image: url('../images/home-banner-2-scaled.jpg');
+	height: 100%;
+
+}
+
+/*@media (min-width:34em) {
+		{}
+}
